--- a/GitProject/force-app/main/default/lwc/hellowWorld/hellowWorld.html
+++ b/GitProject/force-app/main/default/lwc/hellowWorld/hellowWorld.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card title="HelloWorld">
         <div class="slds-m-around_xx-large">
-            <p>hello, {greeting}</p>
+            <p>Hero, {greeting}</p>
             <lightning-input label="Name"  value={greeting} onchange={changeHandler}></lightning-input>
         </div>
     </lightning-card>
