--- a/GitProject/force-app/main/default/lwc/helloForEach/helloForEach.html
+++ b/GitProject/force-app/main/default/lwc/helloForEach/helloForEach.html
@@ -3,10 +3,10 @@
         <ul class="slds-m-around_medium">
             <template  iterator:it={contacts}>
                 <li key={it.value.id}>
-                    {it.value.Name},{it.value.Title}  
-                    <!--<div if:true={it.first} class="list-first"></div>
+                    
+                    <div if:true={it.first} class="list-first"></div>
                     {it.value.Name},{it.value.Title}
-                    <div if:true={it.last} class="list-last"></div>-->
+                    <div if:true={it.last} class="list-last"></div>
                 </li>
 
             </template>
