--- a/GitProject/force-app/main/default/lwc/shapeCalculator/shapeCalculator.html
+++ b/GitProject/force-app/main/default/lwc/shapeCalculator/shapeCalculator.html
@@ -1,13 +1,13 @@
 <template>
     <lightning-card title ="Shape Calculator">
         <lightning-layout multiple-rows>
-            <lightning-layout-item size="9" padding="around-medium">
+            <lightning-layout-item size="9" padding="around-small">
                 <lightning-input type="number" label="Enter side of the square" value="12345.01" onchange={sideChangeHandler}></lightning-input>
             </lightning-layout-item>
             <lightning-layout-item size="9" padding="around-medium">
                     <lightning-input type="number" label="Enter width of the rectangle" onchange={widthChangeHandler}></lightning-input>
            </lightning-layout-item>
-           <lightning-layout-item size="12" padding="around-medium">
+           <lightning-layout-item size="12" padding="around-large">
                 <lightning-input type="number" label="Enter height of the rectangle" onchange={heightChangeHandler}></lightning-input>
          </lightning-layout-item>
          <lightning-layout-item size="12" padding="around-medium">
@@ -20,7 +20,7 @@
             <lightning-button-group>
                 <lightning-button label="Square" icon-position="right" onclick={calculateSqAreaHandler}></lightning-button>
                 <lightning-button label="Rectangle" icon-position="center" onclick={calculateRecAreaHandler}></lightning-button>
-                <lightning-button label="Rhombus" icon-position="left" onclick={calculateRhAreaHandler}></lightning-button>
+                <lightning-button label="Rhombus" icon-position="right" onclick={calculateRhAreaHandler}></lightning-button>
             </lightning-button-group>
 
         </lightning-layout-item>
